--- a/src/styles-variables.scss
+++ b/src/styles-variables.scss
@@ -5,3 +5,7 @@ $grid-breakpoints: (
   lg: 992px,
   xl: 1200px
 );
+
+$link-color: #3f51b5;
+$link-hover-decoration: none;
+$link-hover-color: currentColor;
