--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,6 @@
 
 @import '~bootstrap/scss/bootstrap-reboot';
 @import '~bootstrap/scss/bootstrap-grid';
+@import 'styles-reset';
 
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
